--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node twitterBot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
