--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "Api"
   ],
   "author": "Raghav Sharma",
-  "license": "ISC",
+  "license": "LICENSE-MIT",
   "bugs": {
     "url": "https://github.com/sharmaraghav260/TwitterBot/issues"
   },
